# dist-matrix

./: .gitignore  LICENSE  README.md  fixup_grayskull.py  meta.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dist-matrix/: meta.yaml
dist_matrix/: __init__.py  cuda_dist_matrix.py  cuda_dist_matrix_full.py  meta.yaml  njit_dist_matrix.py  njit_dist_matrix_full.py
dist_matrix/tests/: test_cpu_helper.py  test_dist_matrix.py  test_njit.py
dist_matrix/utils/: cpu_helper.py  cpu_metrics.py
