[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dist_matrix"
authors = [{name = "Sterling G. Baird", email = "sterling.baird@utah.edu"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

requires-python = ">=3.7,<3.10"

dependencies=[
    "numpy",
    "scipy",
    "numba>=0.53.1",
]

[project.optional-dependencies]
tests = [
    "pytest"
]

[project.urls]
Home = "https://github.com/sparks-baird/dist-matrix"
